# anki-gpt

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main_anki-gpt.yml
ankigpt/: __init__.py  app.py  flashcards.py  landing.html  wiki_search.py
terraform/: main.tf
