[project]
name = "anki-gpt"
version = "0.0.1"
description = "AI generated flashcards for Anki"
authors = [{ name = "Shroominic", email = "contact@shroominic.com" }]
dependencies = ["funcchain>=0.3.5", "fastapi>=0.111", "uvicorn>=0.30"]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.10.0", "ruff>=0.4.9"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["anki_gpt"]
